Fixed CSS issue with table button clipping out of the thead

--- a/iron-fist-watcher/src/assets/base.css
+++ b/iron-fist-watcher/src/assets/base.css
@@ -7,7 +7,7 @@
 
 * {
   box-sizing: content-box;
-  border:1px solid red;
+  
   z-index: 1;
 }
 
@@ -72,4 +72,8 @@ h4 {
   padding: 10px;
   margin: 10px 0;
   
+}
+
+thead th button {
+  width:93%;
 }
